--- a/dayday/situ.html
+++ b/dayday/situ.html
@@ -20,7 +20,7 @@
     position: absolute;
     width: 1000px;
     height: 100px;
-    margin: auto;
+    margin: 600px 400px;
     left: 0;
     right: 0;
     top: 0;
